# PupuserIA-

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
ai/: README.md
ai/concierge/: __init__.py  concierge.py  memory.py  models.py
ai/content/: engine.py
ai/tutor/: tutor.py
ai/valuation/: engine.py
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: config.py  database.py  main.py  models.py
apps/api/app/api/: router.py
apps/api/app/api/endpoints/: concierge.py  content.py  coverage.py  foundation.py  health.py  properties.py  tours.py
apps/api/tests/: __init__.py  test_api.py
apps/web/: next.config.ts  package-lock.json  package.json
data/: README.md
data/pipelines/: .gitkeep
data/scrapers/: __init__.py  base.py  check_output.py  diagnose.py  diagnose2.py  diagnose3.py  diagnose_realtor.py  diagnose_realtor2.py  encuentra24.py  encuentra24_cse.py  export_to_web.py  ingestion.py  merge_datasets.py  realtor_intl.py  run.py  test_sources.py
data/seeds/: .gitkeep  001_admin_divisions.sql  002_sample_properties.sql  coverage_gap_report.txt  seed_admin_divisions.py
docs/: CONTRIBUTING.md  EL_SALVADOR_BUKELE_RESEARCH.md  README.md
foundation/: README.md
foundation/contracts/: README.md
foundation/dashboard/: impact_service.py
foundation/programs/: __init__.py
infra/docker/: Dockerfile.api  Dockerfile.go
infra/terraform/: main.tf
(+63 files in other folders)
