[project]
name = "gateway-es-api"
version = "0.1.0"
description = "Gateway El Salvador — FastAPI Backend"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [{ name = "PupuserIA" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.42.0",
    "pinecone-client>=5.0.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "stripe>=11.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "pillow>=11.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

ai = [
    "torch>=2.5.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
